<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/par"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context=".Profile_page">

    <ImageButton
        android:id="@+id/user_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/profile_image" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        android:text="@string/emailtest"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        android:text="@string/place"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/DOB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        android:text="@string/dob"
        android:textColor="#000000"
        android:textSize="15sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:background="#000000"
        android:onClick="logout"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/log_out"
        android:textColor="#ffffff" />
</LinearLayout>